Thu Nov 29 10:31:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.cpp:
          Removed another occurance of arm handling here, gets handled
          at a lower layer already

Thu Nov 29 10:10:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Fixed compile errors in xml builds

Thu Nov 29 08:49:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.cpp:
          Removed arm handling here, gets handled at a lower layer
          already

Wed Nov 28 09:34:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-dev.install:
          rle has no install files

Wed Nov 28 08:55:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/ace.dsc:
        * debian/debian.changelog:
        * debian/debian.compat:
        * debian/debian.control:
        * debian/debian.rules:
        * debian/libace-6.1.6.install:
        * debian/libace-dev.install:
        * debian/libtao-dev.install:
          Added rle compressor and added files as currently work
          on OBS

Wed Nov 28 07:35:14 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.control:
        * debian/ace-netsvcs.doc-base:
        * debian/ace-netsvcs.docs:
        * debian/ace-netsvcs.install:
        * debian/ace-netsvcs.manpages:
        * debian/libnetsvcs-6.1.6.docs:
        * debian/libnetsvcs-6.1.6.install:
        * debian/libnetsvcs-dev.docs:
        * debian/libnetsvcs-dev.install:
        * debian/mwc_workspace.txt:
          Don't package netsvcs

Tue Nov 27 14:41:19 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/ace-netsvcs.manpages:
        * debian/tao-idl.manpages:
        * debian/tao-log.manpages:
        * debian/tao-tls.manpages:
        * debian/tao-utils.manpages:
          No manpage for the moment

Tue Nov 27 14:10:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
